# cpp-qt-qml-game

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
app/qml/: Enemy.qml  MainWindow.qml  Player.qml
core/: CMakeLists.txt  enemy.cpp  enemy.h  enemymodel.cpp  enemymodel.h  entity.h  entityalive.h  entitycreator.h  environment.cpp  environment.h  player.cpp  player.h
